--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -24,6 +24,5 @@ production:
     default:
       uri: <%= ENV['MONGOHQ_URL'] %>
       options:
-        consistency: :strong
-        max_retries: 1
-        retry_interval: 0
+        skip_version_check: true
+        safe: true
