--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -24,5 +24,6 @@ production:
     default:
       uri: <%= ENV['MONGOHQ_URL'] %>
       options:
-        skip_version_check: true
-        safe: true
+        max_retrie: 30
+        retry_interval: 1
+        time_out: 15
