Finish User's Session: sign_in and sign_out

--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -6,6 +6,7 @@ development:
         - localhost:27017
       options:
   options:
+    raise_not_found_error: false
 test:
   sessions:
     default:
@@ -18,6 +19,8 @@ test:
         # low amounts for fast failures.
         max_retries: 1
         retry_interval: 0
+  options:
+    raise_not_found_error: false
 
 production:
   sessions:
