--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -27,7 +27,6 @@ production:
     default:
       uri: <%= ENV['MONGOHQ_URL'] %>
       options:
-        skip_version_check: true
-        safe: true
-  options:
-    raise_not_found_error: false
+        max_retries: 30
+        retry_interval: 1
+        timeout: 15
