--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -27,6 +27,7 @@ production:
     default:
       uri: <%= ENV['MONGOHQ_URL'] %>
       options:
-        max_retries: 30
-        retry_interval: 1
-        timeout: 15
+        max_retries: 1
+        retry_interval: 0
+  options:
+    raise_not_found_error: false
